# karmen

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ci.sh  common.go  example.yml  example_docker-compose.yml  go.mod  go.sum  grpcfunctions.go  main.go  parser.go  runtime.go  store.go
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  karmen.yml
ci/: ci.sh  ci_config.yml  docker-compose.yml
ci/go1/: Dockerfile  go.mod  go.sum  go1.go  main.go
ci/node1/: Dockerfile  node1.js  package.json
ci/python1/: Dockerfile  python1.py
examples/: basic.yml  timeout.yml
goclient/: go.mod  go.sum  main.go
goclient/grpc/: karmen.pb.go  karmen_grpc.pb.go
goclient/karmen/: client.go
grpc/: karmen.pb.go  karmen.proto  karmen_grpc.pb.go
karmen/: Dockerfile  Dockerfile-rpi  go.mod  go.sum  karmen.go
karmen-2.0/: example.yml  go.mod  go.sum  grpcfunctions.go  karmen.go  main.go  parser.go  runtime.go  store.go
karmen-2.0/goclient/: go.mod  main.go
karmen-2.0/grpc/: karmen.pb.go  karmen.proto  karmen_grpc.pb.go
karmen-go-client/: go.mod  karmen.py
karmen-go-client/client/: client.go
karmen-go-client/common/: common.go
karmen-go-client/karmen/: client.go
karmen-go-client/message/: message.go
karmen-go-client/result/: result.go
karmen-node-client/: karmen-client.js  package.json
karmen-python/: Dockerfile  Dockerfile-rpi
karmen-python-client/: MANIFEST  setup.py  smartcarclient.py
karmen-python-client/karmen/: Dockerfile  __init__.py  karmen.py
karmen/common/: common.go
karmen/parser/: parser.go
pythonclient/: README.md  karmen.proto  karmen.py  karmen_pb2_grpc.py  setup.py
pythonclient/karmen/: __init__.py  karmen.py  karmen_pb2.py  karmen_pb2_grpc.py
rustclient/: Cargo.toml  build.rs
rustclient/example/: Cargo.toml
rustclient/example/src/: main.rs
rustclient/lib/: Cargo.toml
rustclient/lib/proto/: karmen.proto
rustclient/lib/src/: lib.rs
rustclient/src/: main.rs
