[package]
name = "karmen"
version = "2.0.1"
edition = "2021"
description = "A rust client library for the Karmen framework"
homepage = "https://github.com/jrcichra/karmen"
repository = "https://github.com/jrcichra/karmen"
readme = "../../README.md"
license = "MIT"

[dependencies]
tonic = "0.12.2"
prost = "0.13.1"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
futures = "0.3.30"
async-stream = "0.3.5"

[build-dependencies]
tonic-build = "0.12.1"