[package]
name = "karmen"
version = "2.0.1"
edition = "2021"
description = "A rust client library for the Karmen framework"
homepage = "https://github.com/jrcichra/karmen"
repository = "https://github.com/jrcichra/karmen"
readme = "../../README.md"
license = "MIT"

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
futures = "0.3.30"
async-stream = "0.3.6"

[build-dependencies]
tonic-build = "0.12.3"